--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <p>Developed by <span>
     Raphael Camson</span> / &copy; 2021 All Rights Reserved</p> 
   </footer>
-  <script src="JS/script.js"></script>
+  <script src="js/script.js"></script>
 
   </body>
 
