--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="contact-content">
            <div class="column left">
               <div class="text">Get in touch TODAY</div>
-                  <p><strong>Putting up a website is really is hard these days. But don’t worry, we’ve got you covered. All we need is some information about your business and we’ll get started right away</strong>.</p>
+                  <p><strong>Putting up a website is really hard these days. But don’t worry, we got you. All we need is some information about your business and we’ll get started right away</strong>.</p>
                   <div class="icons">
                         <div class="row">
                <img src="images/user2.jpg">
