--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
           <div class="field textarea"> 
             <textarea name="Message" cols="30" rows="10" placeholder="Message" required>
-            </textarea>
+            </textarea>==$0
           </div>
          <div class="button">
          <button type="submit">Send Message</button>
