--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
          <img src="images/profilepic.jpg" alt="Ownerspic">
          </div>
           <div class="column right">
-        <h2 class="text">We are ready to serve you.</h2>
-         <p>We are grateful to introduce and inform you that <strong> I AM RTECH WEB DEVELOPER.</strong> We are now ready to serve you from the <b>design layout</b> in deploying your website online. We specialized in <i>creating websites</i> that define your brand and showcase your <em>company products and services</em> on the internet.</p>
+        <h2 class="text">I am ready to serve you.</h2>
+         <p>I am grateful to introduce and inform you that <strong> I AM RTECH WEB DEVELOPER.</strong> I am  now ready to serve you from the <b>design layout</b> in deploying your website online. We specialized in <i>creating websites</i> that define your brand and showcase your <em>company products and services</em> on the internet.</p>
      </div>
    </div>
 </div>
