--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          </div>
           <div class="column right">
         <h2 class="text">I am ready to serve you.</h2>
-         <p>I am grateful to introduce and inform you that <strong> I AM RTECH WEB DEVELOPER.</strong> I am  now ready to serve you from the <b>design layout</b> in deploying your website online. We specialized in <i>creating websites</i> that define your brand and showcase your <em>company products and services</em> on the internet.</p>
+         <p>I am grateful to introduce and inform you that <strong> I AM RTECH WEB DEVELOPER.</strong> I am  now ready to serve you from the <b>design layout</b> in deploying your website online. I'm specializing the <i>creation of websites</i> that define your brand and showcase your <em>company products and services</em> on the internet.</p>
      </div>
    </div>
 </div>
@@ -90,8 +90,8 @@
   
     <div class="skills-content">
       <div class="column left">
-        <div class="text">Our Team Creative Skills & Development Experience</div>
-            <p>Our team expertise majors in Web Development using HTML, CSS, Javascript, PHP and MySQL which are the primary languages that power the  internet. We will make sure that your website is up to date and user friendly with simple interface easy  to navigate. </p>
+        <div class="text">My Creative Skills & Development Experience</div>
+            <p>My expertise are major in Web Development using HTML, CSS, Javascript, PHP and MySQL which are the primary languages that power the  internet. I will make sure that your website is up to date and user friendly with simple interface easy  to navigate. </p>
         </div>
         <div class="column right">
           <div class="bar">
@@ -140,7 +140,7 @@
       <div class="contact-content">
            <div class="column left">
               <div class="text">Get in touch TODAY</div>
-                  <p><strong>Putting up a website is really hard these days. But don’t worry, I got you. All we need is some information about your business and we’ll get started right away</strong>.</p>
+                  <p><strong>Putting up a website is really hard these days. But don’t worry, I got you. All I need is some information about your business and I’ll get started right away</strong>.</p>
                   <div class="icons">
                         <div class="row">
                <img src="images/user2.jpg">
